--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 	<script type="text/javascript" src="scripts/flickity.pkgd.min.js"></script>
 	<script src="scripts/video-js.min.js"></script>
 	<script src="scripts/youtube.min.js"></script>
-	<script type="text/javascript" src="scripts/playingScript.js"></script>
+	<!-- <script type="text/javascript" src="scripts/playingScript.js"></script> -->
 	<script type="text/javascript">
 		var iframe,
 		playBtns = document.querySelectorAll('.playBtn'),
