--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
 			</video>
 			<div class="textVideo">
-				<button class="playBtn" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),2)"><img alt="" src="icons/play-button.png">
+				<button class="playBtn" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),3)"><img alt="" src="icons/play-button.png">
 				</button>
 			</div>
 		</div>
@@ -306,16 +306,16 @@
 		}
 		var iframe,
 		playBtns = document.querySelectorAll('.playBtn'),
-		rp = 0,
+		rp = 0;
 		showPosterBeucaseOfNav = true;
-	    if(multipleStringSearch(navigator.userrAgent,['android','iphone','ipad'])){
+	    if(multipleStringSearch(navigator.userAgent,['android','iphone','ipad'])){
 	    	if(navigator.userrAgent.toLowerCase().match(/edg/i)){
 	    		showPosterBeucaseOfNav = false;
 	    	}
         }
 		window.onload = function(){
 			iframe = document.querySelectorAll('iframe');
-			}
+		}
 		      function playVideos(video, playerFullScreen,index){ //YOUTUBE
 		      	'use strict';
 		      	iframe[index].style.transform = 'scale(1.2)'
