--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 		rp = 0;
 		showPosterBeucaseOfNav = true;
 	    if(multipleStringSearch(navigator.userAgent,['android','iphone','ipad'])){
-	    	if(navigator.userrAgent.toLowerCase().match(/edg/i)){
+	    	if(navigator.userAgent.toLowerCase().match(/edg/i)){
 	    		showPosterBeucaseOfNav = false;
 	    	}
         }
