--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 		}
 		      function playVideos(video, playerFullScreen,index){ //YOUTUBE
 		      	'use strict';
-		      	iframe[index].style.transform = 'scale(1.2)'
+		      	iframe[1].style.transform = 'scale(1.2)'
 		      	let parent = video.parentElement.parentElement;
 		      	parent.querySelector('.vjs-fullscreen-control').click();
 		      	parent.style.display = 'block';
