--- a/index.html
+++ b/index.html
@@ -308,16 +308,10 @@
 		playBtns = document.querySelectorAll('.playBtn'),
 		rp = 0;
 		showPosterBeucaseOfNav = true;
-	    if(navigator.userAgent.toLowerCase().indexOf('android') > -1){
-	    	console.log('on android');
+	    if(navigator.userAgent.toLowerCase().indexOf('android') > -1 || navigator.userAgent.toLowerCase().indexOf('iphone') > -1 || navigator.userAgent.toLowerCase().indexOf('ipad') > -1){
 	    	if(navigator.userAgent.toLowerCase().match(/edg/i)){
-	    		console.log("on edge");
 	    		showPosterBeucaseOfNav = false;
-	    	}else{
-	    		console.log('not on mobile');
 	    	}
-        }else{
-        	console.log('not on android');
         }
 		window.onload = function(){
 			iframe = document.querySelectorAll('iframe');
