--- a/index.html
+++ b/index.html
@@ -318,18 +318,19 @@
 		}
 		      function playVideos(video, playerFullScreen,index){ //YOUTUBE
 		      	'use strict';
-		      	/*iframe[index].style.transform = 'scale(1.3)';*/
+		      	iframe[index].style.transform = 'scale(1.3)';
 		      	let parent = video.parentElement.parentElement;
 		      	parent.querySelector('.vjs-fullscreen-control').click();
 		      	parent.style.display = 'block';
 		      	parent.style.position ='absolute';
-		      	playerFullScreen.controls(true);
 		      	if(showPosterBeucaseOfNav){
 		      		Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)',display:'block',cursor:'default'});
 		      	    playerFullScreen.play();
+		      	    playerFullScreen.controls(false);
 		      	}else{
 		      		Object.assign(parent.querySelector('.vjs-poster').style,{display:'none'});
 		      	    playerFullScreen.play();
+		      	    playerFullScreen.controls(true);
 		      	}
 		      	let r = 0;
 		      	document.addEventListener('fullscreenchange',function(e){
