--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 		      	if(showPosterBeucaseOfNav){
 		      		Object.assign(parent.querySelector('.vjs-poster').style,{background:'rgba(0,0,0,0)',display:'block',cursor:'default'});
 		      	    playerFullScreen.play();
-		      	    playerFullScreen.controls(true);
+		      	    playerFullScreen.controls(false);
 		      	}else{
 		      		Object.assign(parent.querySelector('.vjs-poster').style,{display:'none'});
 		      	    playerFullScreen.play();
