--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</ul>
 		</nav>
 		<div class="video">
-			<div class="poster heroPoster">
+			<div class="poster heroPoster softAnimation">
 				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}">
 					<source src="https://youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15&origin=http://localhost:80" type="video/youtube" />
@@ -48,7 +48,7 @@
 				<p class="smallTitle greyTitle">feature film</p>
 				<h1 class="bigTitle">Meet BlackBay Lodge</h1>
 				<p class="smallDesc">Pike fishing in Brazil featuring our cutting-edge fishing hooks.</p>
-				<button class="playBtn" onmouseenter="hoverImgPlay(document.querySelector('.heroPosterImg'))" onmouseleave="leaveImgPlay(document.querySelector('.heroPosterImg'))" onclick="playVideos(document.getElementById('heroVideo_youtube_api'), videojs('heroVideo'),1)"><img alt="" src="icons/play-button.png"></button>
+				<button class="playBtn softAnimation" onmouseenter="hoverImgPlay(document.querySelector('.heroPosterImg'))" onmouseleave="leaveImgPlay(document.querySelector('.heroPosterImg'))" onclick="playVideos(document.getElementById('heroVideo_youtube_api'), videojs('heroVideo'),1)"><img alt="" src="icons/play-button.png"></button>
 			</div>
 		</div>
 		<!-- Rotate it --><hr class="lineTopSection">
@@ -119,7 +119,7 @@
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
 			</video>
 			<div class="textVideo">
-				<button class="playBtn" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),3)"><img alt="" src="icons/play-button.png">
+				<button class="playBtn softAnimation" onmouseenter="hoverImgPlay(document.querySelector('.videoSec .video .poster'))" onmouseleave="leaveImgPlay(document.querySelector('.videoSec .video .poster'))" onclick="playVideos(document.getElementById('techVideo_youtube_api'),videojs('techVideo'),3)"><img alt="" src="icons/play-button.png">
 				</button>
 			</div>
 		</div>
