--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="video">
 			<div class="poster heroPoster softAnimation">
 				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg">   
-				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}">
+				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
 					<source src="https://youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15&origin=http://localhost:80" type="video/youtube" />
 				</video>
 			</div>
@@ -112,7 +112,7 @@
 		<p class="sectionTitle">Bigger, Stronger, Sharper</p>
 		<div class="video">
 			<div class="poster softAnimation"></div>
-			<video controls data-setup='{}' id="techVideoBg" class="video-js">
+			<video controls data-setup='{}' id="techVideoBg" class="video-js" autoplay muted>
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15" type="video/youtube" /> 
 			</video>
 			<video controls data-setup='{}' id="techVideo" class="video-js">
