--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 		      	}else{
 		      		Object.assign(parent.querySelector('.vjs-poster').style,{display:'none'});
 		      	    playerFullScreen.play();
-		      	    playerFullScreen.controls(true);
+		      	    playerFullScreen.controls(false);
 		      	}
 		      	let r = 0;
 		      	document.addEventListener('fullscreenchange',function(e){
