--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</nav>
 		<div class="video">
 			<div class="poster heroPoster softAnimation">
-				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg">   
+				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
 					<source src="https://youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=15&origin=https://yht456.github.io/Fishingwebsite/" type="video/youtube" />
 				</video>
