--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 			<div class="poster heroPoster softAnimation">
 				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
-					<source src="https://youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=17&origin=https://yht456.github.io/Fishingwebsite/" type="video/youtube" />
+					<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=17&origin=https://yht456.github.io/Fishingwebsite/" type="video/youtube" />
 				</video>
 			</div>
 			<video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
-				<source src="https://youtube.com/watch?v=1wkPMUZ9vX4?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
+				<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
 			</video>
 			<div class="textVideo">
 				<p class="smallTitle greyTitle">feature film</p>
