--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="poster heroPoster softAnimation">
 				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
-					<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=20&end=30&origin=https://yht456.github.io/Fishingwebsite/" type="video/youtube" />
+					<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=20&end=33" type="video/youtube" />
 				</video>
 			</div>
 			<video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
@@ -113,7 +113,7 @@
 		<div class="video">
 			<div class="poster softAnimation"></div>
 			<video controls data-setup='{}' id="techVideoBg" class="video-js" autoplay muted>
-				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=17&origin=https://yht456.github.io/Fishingwebsite" type="video/youtube" /> 
+				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0&start=7&end=17" type="video/youtube" /> 
 			</video>
 			<video controls data-setup='{}' id="techVideo" class="video-js">
 				<source src="https://youtube.com/watch?v=nqye02H_H6I?vq=hd720&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" /> 
