--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</p>
 			</div>
 			<div class="overlayMenuBar softAnimation" onclick="removeNav()"></div>
-			<ul class="bottomNav softAnimation">
+			<ul class="bottomNav">
 				<li><a href="#">hooks</a><button class="xMark softAnimation" onclick="removeNav()"><svg ;xmlns="http://www.w3.org/2000/svg" width="82.763" viewBox="0 0 82.763 82.741"><path id="Icon_ionic-ios-close" data-name="Icon ionic-ios-close" d="M62.473,52.659,92.033,23.1a6.926,6.926,0,1,0-9.8-9.8l-29.56,29.56L23.118,13.3a6.926,6.926,0,1,0-9.8,9.8l29.56,29.56-29.56,29.56a6.926,6.926,0,0,0,9.8,9.8l29.56-29.56,29.56,29.56a6.926,6.926,0,0,0,9.8-9.8Z" transform="translate(-11.285 -11.289)"/></svg></button></li>
 				<li><a href="#">apparel</a></li>
 				<li><a href="#">accessories</a></li>
