--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</video>
 			</div>
 			<video id="heroVideo" class="video-js" controls preload="auto" data-setup="{}">
-				<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd1080&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
+				<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd1080&hd=1&controls=0&modestbranding=1&showinfo=0&rel=0" type="video/youtube" />
 			</video>
 			<div class="textVideo">
 				<p class="smallTitle greyTitle">feature film</p>
