--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</ul>
 		</nav>
 		<div class="video">
-			<div class="poster heroPoster softAnimation">
+			<div class="poster heroPoster">
 				<img alt="" src="assets/topSectionVideoPoster.jpg" class="heroPosterImg softAnimation">   
 				<video id="heroVideoBg" class="video-js" preload="auto" data-setup="{}" autoplay muted>
 					<source src="https://www.youtube.com/embed/IlWWSujsLcw?vq=hd1080&hd=1&controls=0&modestbranding=1&showinfo=0&rel=0&start=62&end=77" type="video/youtube" />
